# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

common_include = [
  "./common",
  "./engine",
  "//foundation/arkui/napi",
  "//foundation/arkui/napi/interfaces/inner_api",
  "//foundation/arkui/napi/interfaces/kits",
  "//foundation/arkui/napi/native_engine",
  "//third_party/googletest/include",
  "//third_party/node/src",
  "//utils/native/base/include",
]

quickjs_include = common_include
quickjs_include += [ "//foundation/arkui/napi/native_engine/impl/quickjs" ]

ark_include = common_include
ark_include += [
  "//ark/js_runtime",
  "//foundation/arkui/napi/native_engine/impl/ark",
]

jerryscript_include = common_include
jerryscript_include += [
  "//foundation/arkui/napi/native_engine/impl/jerryscript",
  "//third_party/jerryscript",
  "//third_party/jerryscript/jerry-core/include",
]

common_deps = [
  "//third_party/googletest:gtest",
  "//third_party/googletest:gtest_main",
  "//third_party/libuv:uv",
  "//utils/native/base:utils",
]

quickjs_deps = common_deps
quickjs_deps += [
  "//foundation/arkui/napi:ace_napi_quickjs",
  "//third_party/quickjs:qjs",
]

ark_deps = common_deps
ark_deps += [
  "//ark/js_runtime:libark_jsruntime",
  "//foundation/arkui/napi:ace_napi_ark",
]

jerryscript_deps = common_deps
jerryscript_deps += [
  "//foundation/arkui/napi:ace_napi_jerryscript",
  "//third_party/jerryscript:libjerryscript",
]
